tests/baselines/reference/specializationOfExportedClass.errors.txt
specializationOfExportedClass.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== specializationOfExportedClass.ts (1 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
    export class C<T> { }
    
    }
     
    var x = new M.C<string>();
    